commit ReWork Design - fix button feel

--- a/footAboutUs.html
+++ b/footAboutUs.html
@@ -151,7 +151,7 @@
                                 <div class="col-12 px-0 py-1 text-justify">
                                     <a data-toggle="collapse" href="#collapseMainDesc" role="button"
                                         aria-expanded="false" aria-controls="collapseMainDesc">
-                                        <div class="bg-primary text-white text-center rounded-corner border score mb-1">
+                                        <div class="btn-primary text-center rounded-corner border score mb-1">
                                             About Us
                                         </div>
                                     </a>
