--- a/footFeedback.html
+++ b/footFeedback.html
@@ -151,7 +151,7 @@
                 <div class="col-12 px-0 py-1 text-justify">
                   <a data-toggle="collapse" href="#collapseMainFeed" role="button" aria-expanded="false"
                     aria-controls="collapseMainFeed">
-                    <div class="bg-primary text-white text-center rounded-corner border score mb-1">
+                    <div class="btn-primary text-center rounded-corner border score mb-1">
                       Feedback
                     </div>
                   </a>
@@ -206,7 +206,7 @@
                 <div class="col-12 px-0 py-1 text-justify">
                   <a data-toggle="collapse" href="#collapseMainDonate" role="button" aria-expanded="false"
                     aria-controls="collapseMainDonate">
-                    <div class="bg-primary text-white text-center rounded-corner border score mb-1">
+                    <div class="btn-primary text-center rounded-corner border score mb-1">
                       Donasi
                     </div>
                   </a>
@@ -250,7 +250,7 @@
                 <div class="col-12 px-0 py-1 text-justify">
                   <a data-toggle="collapse" href="#collapseMainJasa" role="button" aria-expanded="false"
                     aria-controls="collapseMainDonate">
-                    <div class="bg-primary text-white text-center rounded-corner border score mb-1">
+                    <div class="btn-primary text-center rounded-corner border score mb-1">
                       Jasa Serayu
                     </div>
                   </a>
