--- a/listAnimeList.html
+++ b/listAnimeList.html
@@ -150,7 +150,7 @@
                 <div class="col-12 px-0 py-1 text-justify">
                   <a data-toggle="collapse" href="#collapseMainGenre" role="button" aria-expanded="false"
                     aria-controls="collapseMainDesc">
-                    <div class="bg-primary text-white text-center rounded-corner border score mb-1">
+                    <div class="btn-primary text-center rounded-corner border score mb-1">
                       Genre
                     </div>
                   </a>
@@ -209,7 +209,7 @@
                 <div class="col-12 px-0 py-1 text-justify">
                   <a data-toggle="collapse" href="#collapseMainList" role="button" aria-expanded="false"
                     aria-controls="collapseMainDesc">
-                    <div class="bg-primary text-white text-center rounded-corner border score mb-1">
+                    <div class="btn-primary text-center rounded-corner border score mb-1">
                       Anime List
                     </div>
                   </a>
