--- a/footFeedback.html
+++ b/footFeedback.html
@@ -66,9 +66,9 @@
                 Type
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">TV Series</a>
-                <a class="dropdown-item" href="#">Movie</a>
-                <a class="dropdown-item" href="#">OVA / ONA / Special</a>
+                <a class="dropdown-item" href="typeTv.html">TV Series</a>
+                <a class="dropdown-item" href="typeMovie.html">Movie</a>
+                <a class="dropdown-item" href="typeSpecial.html">OVA / ONA / Special</a>
               </div>
             </li>
             <li class="nav-item dropdown">
@@ -77,13 +77,13 @@
                 Anime List
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Anime List</a>
-                <a class="dropdown-item" href="#">Genre</a>
-                <a class="dropdown-item" href="#">Latest Update</a>
+                <a class="dropdown-item" href="listAnimeList.html#animeList">Anime List</a>
+                <a class="dropdown-item" href="listAnimeList.html#genreList">Genre</a>
+                <a class="dropdown-item" href="listLastestUpdate.html">Latest Update</a>
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="l_update.php">Gallery</a>
+              <a class="nav-link" href="gallery.html">Gallery</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -91,10 +91,10 @@
                 Services
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Donasi</a>
-                <a class="dropdown-item" href="#">Feedback</a>
-                <a class="dropdown-item" href="#">Jasa Render</a>
-                <a class="dropdown-item" href="#">Jasa Gambar</a>
+                <a class="dropdown-item" href="footFeedback.html#donasi">Donasi</a>
+                <a class="dropdown-item" href="footFeedback.html#feedback">Feedback</a>
+                <a class="dropdown-item" href="footFeedback.html#jasa">Jasa Render</a>
+                <a class="dropdown-item" href="footFeedback.html#jasa">Jasa Gambar</a>
                 <!-- <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="g_page.php">See More...</a> -->
               </div>
@@ -105,17 +105,19 @@
                 Random
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Wangy maker</a>
+                <a class="dropdown-item" href="randomPatchNote.html">Patch Notes</a>
+                <a class="dropdown-item" href="" onclick="BlockedTest()">Wangy maker</a>
                 <!-- <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="g_page.php">See More...</a> -->
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="l_update.php">Tutorial</a>
+              <a class="nav-link" href="" onclick="BlockedMagerTest()">Tutorial</a>
             </li>
             <li class="nav-item mx-xl-2 ">
               <form class="form-inline my-2 my-xl-0">
-                <button class="btn btn-outline-primary" type="button">Notify&nbsp;Me!!!</button>
+                <button class="btn btn-outline-primary" type="button"
+                  onclick="BlockedNotifyMe()">Notify&nbsp;Me!!!</button>
               </form>
             </li>
 
@@ -345,10 +347,10 @@
 
       <ul class="list-inline">
         <li class="list-inline-item"><a href="index.html">Home</a></li>
-        <li class="list-inline-item"><a href="dmca.html">DMCA</a></li>
-        <li class="list-inline-item"><a href="aboutUs.html">About Us</a></li>
-        <li class="list-inline-item"><a href="feedback.html">Feedback</a></li>
-        <li class="list-inline-item"><a href="privacyPolicy.html">Privacy Policy</a></li>
+        <li class="list-inline-item"><a href="footDmca.html">DMCA</a></li>
+        <li class="list-inline-item"><a href="footAboutUs.html">About Us</a></li>
+        <li class="list-inline-item"><a href="footFeedback.html">Feedback</a></li>
+        <li class="list-inline-item"><a href="footPrivacyPolicy.html">Privacy Policy</a></li>
       </ul>
       <p class="copyright">Serayu Fansub © 2021</p>
     </footer>
