commit ReWork Design - fix layout - gallery

--- a/animePages.html
+++ b/animePages.html
@@ -41,99 +41,99 @@
 
 
 
-  <!-- #Header-->
-  <nav class="navbar navbar-expand-xl navbar-dark bg-dark mb-4">
-    <div class="container-fluid ">
+    <!-- #Header-->
+    <nav class="navbar navbar-expand-xl navbar-dark bg-dark mb-4">
+        <div class="container-fluid ">
 
-      <a class="navbar-brand" href="index.html" style="color: white;">
-        <a class="navbar-brand" href="index.html">
-          <img src="img/SeraYu_Logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
-          SeraYu Fansub 60 FPS</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-          aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+            <a class="navbar-brand" href="index.html" style="color: white;">
+                <a class="navbar-brand" href="index.html">
+                    <img src="img/SeraYu_Logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+                    SeraYu Fansub 60 FPS</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                    aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
-                Type
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="typeTv.html">TV Series</a>
-                <a class="dropdown-item" href="typeMovie.html">Movie</a>
-                <a class="dropdown-item" href="typeSpecial.html">OVA / ONA / Special</a>
-              </div>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
-                Anime List
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="listAnimeList.html#animeList">Anime List</a>
-                <a class="dropdown-item" href="listAnimeList.html#genreList">Genre</a>
-                <a class="dropdown-item" href="listLastestUpdate.html">Latest Update</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="gallery.html">Gallery</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
-                Services
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="footFeedback.html#donasi">Donasi</a>
-                <a class="dropdown-item" href="footFeedback.html#feedback">Feedback</a>
-                <a class="dropdown-item" href="footFeedback.html#jasa">Jasa Render</a>
-                <a class="dropdown-item" href="footFeedback.html#jasa">Jasa Gambar</a>
-                <!-- <div class="dropdown-divider"></div>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Type
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="typeTv.html">TV Series</a>
+                                <a class="dropdown-item" href="typeMovie.html">Movie</a>
+                                <a class="dropdown-item" href="typeSpecial.html">OVA / ONA / Special</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Anime List
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="listAnimeList.html#animeList">Anime List</a>
+                                <a class="dropdown-item" href="listAnimeList.html#genreList">Genre</a>
+                                <a class="dropdown-item" href="listLastestUpdate.html">Latest Update</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="gallery.html">Gallery</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Services
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="footFeedback.html#donasi">Donasi</a>
+                                <a class="dropdown-item" href="footFeedback.html#feedback">Feedback</a>
+                                <a class="dropdown-item" href="footFeedback.html#jasa">Jasa Render</a>
+                                <a class="dropdown-item" href="footFeedback.html#jasa">Jasa Gambar</a>
+                                <!-- <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="g_page.php">See More...</a> -->
-              </div>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
-                Random
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="randomPatchNote.html">Patch Notes</a>
-                <a class="dropdown-item" href="" onclick="BlockedTest()">Wangy maker</a>
-                <!-- <div class="dropdown-divider"></div>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Random
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="randomPatchNote.html">Patch Notes</a>
+                                <a class="dropdown-item" href="" onclick="BlockedTest()">Wangy maker</a>
+                                <!-- <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="g_page.php">See More...</a> -->
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="" onclick="BlockedMagerTest()">Tutorial</a>
-            </li>
-            <li class="nav-item mx-xl-2 ">
-              <form class="form-inline my-2 my-xl-0">
-                <button class="btn btn-outline-primary" type="button"
-                  onclick="BlockedNotifyMe()">Notify&nbsp;Me!!!</button>
-              </form>
-            </li>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="" onclick="BlockedMagerTest()">Tutorial</a>
+                        </li>
+                        <li class="nav-item mx-xl-2 ">
+                            <form class="form-inline my-2 my-xl-0">
+                                <button class="btn btn-outline-primary" type="button"
+                                    onclick="BlockedNotifyMe()">Notify&nbsp;Me!!!</button>
+                            </form>
+                        </li>
 
-          </ul>
-          <form class="form-row my-2 my-xl-0">
-            <div class="col-10">
-              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            </div>
-            <div class="col-2">
-              <button class="btn btn-outline-light my-2 my-sm-0" type="submit" onclick="BlockedTest()"><i
-                  class="bi bi-search"></i></button>
-            </div>
-          </form>
+                    </ul>
+                    <form class="form-row my-2 my-xl-0">
+                        <div class="col-10">
+                            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        </div>
+                        <div class="col-2">
+                            <button class="btn btn-outline-light my-2 my-sm-0" type="submit" onclick="BlockedTest()"><i
+                                    class="bi bi-search"></i></button>
+                        </div>
+                    </form>
+                </div>
         </div>
-    </div>
-  </nav>
-  <!-- #endHeader -->
+    </nav>
+    <!-- #endHeader -->
 
     <!-- #Content-->
     <div class="container">
@@ -356,11 +356,11 @@
                             <div class="col-12 bg-light rounded-corner border  ">
 
                                 <div class="col-12 px-0 py-1 text-justify">
-                                    <a data-toggle="collapse" href="#collapseMainLink" role="button" aria-expanded="false"
-                                        aria-controls="collapseSS">
-                                    <div class="btn-primary text-center rounded-corner border score mb-1">
-                                        Anime and Subtitle Link
-                                    </div>
+                                    <a data-toggle="collapse" href="#collapseMainLink" role="button"
+                                        aria-expanded="false" aria-controls="collapseSS">
+                                        <div class="btn-primary text-center rounded-corner border score mb-1">
+                                            Anime and Subtitle Link
+                                        </div>
                                     </a>
                                     <hr>
 
@@ -771,27 +771,27 @@
     </div>
     <!-- #endContent -->
 
-  <!-- Footer -->
-  <div class="footer-basic navbar-dark bg-dark mt-4 ">
-    <footer>
-      <div class="social">
-        <a href="https://www.instagram.com/serayufansub/"><i class="bi bi-instagram"></i></a>
-        <a href="https://discord.com/invite/ycTY2gk9k3"><i class="bi bi-discord"></i></a>
-        <a href="https://www.facebook.com/serayufansub60fps/"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.youtube.com/channel/UCUJYB4Sr7A2R7RhjPeEiW_Q"><i class="bi bi-youtube"></i></a>
-      </div>
+    <!-- Footer -->
+    <div class="footer-basic navbar-dark bg-dark mt-4 ">
+        <footer>
+            <div class="social">
+                <a href="https://www.instagram.com/serayufansub/"><i class="bi bi-instagram"></i></a>
+                <a href="https://discord.com/invite/ycTY2gk9k3"><i class="bi bi-discord"></i></a>
+                <a href="https://www.facebook.com/serayufansub60fps/"><i class="bi bi-facebook"></i></a>
+                <a href="https://www.youtube.com/channel/UCUJYB4Sr7A2R7RhjPeEiW_Q"><i class="bi bi-youtube"></i></a>
+            </div>
 
-      <ul class="list-inline">
-        <li class="list-inline-item"><a href="index.html">Home</a></li>
-        <li class="list-inline-item"><a href="footDmca.html">DMCA</a></li>
-        <li class="list-inline-item"><a href="footAboutUs.html">About Us</a></li>
-        <li class="list-inline-item"><a href="footFeedback.html">Feedback</a></li>
-        <li class="list-inline-item"><a href="footPrivacyPolicy.html">Privacy Policy</a></li>
-      </ul>
-      <p class="copyright">Serayu Fansub © 2021</p>
-    </footer>
-  </div>
-  <!-- Footer -->
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="index.html">Home</a></li>
+                <li class="list-inline-item"><a href="footDmca.html">DMCA</a></li>
+                <li class="list-inline-item"><a href="footAboutUs.html">About Us</a></li>
+                <li class="list-inline-item"><a href="footFeedback.html">Feedback</a></li>
+                <li class="list-inline-item"><a href="footPrivacyPolicy.html">Privacy Policy</a></li>
+            </ul>
+            <p class="copyright">Serayu Fansub © 2021</p>
+        </footer>
+    </div>
+    <!-- Footer -->
 
 </body>
 
