--- a/footAboutUs.html
+++ b/footAboutUs.html
@@ -2,44 +2,44 @@
 <html>
 
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Serayu Index</title>
+  <meta charset='utf-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <title>Serayu Index</title>
 
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
 
-    <!-- css bootstrap -->
-    <link href="vendor/css/bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
+  <!-- css bootstrap -->
+  <link href="vendor/css/bootstrap.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
 
-    <!-- Css main-->
-    <link rel="stylesheet" href="css/styleMain.css">
+  <!-- Css main-->
+  <link rel="stylesheet" href="css/styleMain.css">
 
-    <style>
-        /* Background wallpaper */
-        body {
-            background-image: url(img/serayu_bg_light.png);
-            background-size: cover;
-            background-attachment: fixed;
-        }
-    </style>
+  <style>
+    /* Background wallpaper */
+    body {
+      background-image: url(img/serayu_bg_light.png);
+      background-size: cover;
+      background-attachment: fixed;
+    }
+  </style>
 
 </head>
 
 <body>
-    <!-- JavaScript -->
-    <script src="js/scriptMain.js"></script>
+  <!-- JavaScript -->
+  <script src="js/scriptMain.js"></script>
 
 
 
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="vendor/js/jquery-3.5.1.min.js">
-    </script>
-    <script src="vendor/js/popper.min.js">
-    </script>
-    <script src="vendor/js/bootstrap.js">
-    </script>
-    <!-- #endJavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="vendor/js/jquery-3.5.1.min.js">
+  </script>
+  <script src="vendor/js/popper.min.js">
+  </script>
+  <script src="vendor/js/bootstrap.js">
+  </script>
+  <!-- #endJavaScript -->
 
 
   <!-- #Header-->
@@ -139,86 +139,84 @@
 
 
 
-    <!-- #Content-->
-    <div class="container">
+  <!-- #Content-->
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-lg-9 mb-4">
         <div class="row">
-            <div class="col-12 col-lg-9 mb-4">
-                <div class="row">
 
-                    <!-- #Description Box-->
-                    <div class="col-12">
-                        <div class="bg-white rounded-corner px-3 py-3 mb-4">
-                            <div class="col-12 bg-light rounded-corner border  ">
+          <!-- #Description Box-->
+          <div class="col-12">
+            <div class="bg-white rounded-corner px-3 py-3 mb-4">
+              <div class="col-12 bg-light rounded-corner border  ">
 
-                                <div class="col-12 px-0 py-1 text-justify">
-                                    <a data-toggle="collapse" href="#collapseMainDesc" role="button"
-                                        aria-expanded="false" aria-controls="collapseMainDesc">
-                                        <div class="btn-primary text-center rounded-corner border score mb-1">
-                                            About Us
-                                        </div>
-                                    </a>
-                                    <hr>
-
-                                    <div class="collapse show " id="collapseMainDesc">
-                                        <h1>About </h1>
-                                        <h1>Serayu Fansub</h1>
-
-                                        
-
-
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
+                <div class="col-12 px-0 py-1 text-justify">
+                  <a data-toggle="collapse" href="#collapseMainDesc" role="button" aria-expanded="false"
+                    aria-controls="collapseMainDesc">
+                    <div class="btn-primary text-center rounded-corner border score mb-1">
+                      About Us
                     </div>
-                    <!-- #EndDescription Box-->
+                  </a>
+                  <hr>
+
+                  <div class="collapse show " id="collapseMainDesc">
+                    <h1>About </h1>
+                    <h1>Serayu Fansub</h1>
+
+
+
+
+                  </div>
 
                 </div>
+              </div>
+            </div>
+          </div>
+          <!-- #EndDescription Box-->
+
+        </div>
+      </div>
+
+      <!-- #Sidebar-->
+      <div class="col-12 col-lg-3 ">
+        <div class="col-12">
+          <div class="row">
+            <div class="col-12  mb-1">
+              <div class="social bg-dark mx-auto">
+                <a href="https://www.instagram.com/serayufansub/"><i class="bi bi-instagram"></i></a>
+                <a href="https://discord.com/invite/ycTY2gk9k3"><i class="bi bi-discord"></i></a>
+                <a href="https://www.facebook.com/serayufansub60fps/"><i class="bi bi-facebook"></i></a>
+                <a href="https://www.youtube.com/channel/UCUJYB4Sr7A2R7RhjPeEiW_Q"><i class="bi bi-youtube"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 sticky-top">
+          <div class="row">
+
+            <div class="col-12 col-sm-6 col-lg-12 mb-1 d-flex justify-content-center ">
+              <iframe class="embed-responsive-item" src="https://discord.com/widget?id=788456247476617326&theme=dark"
+                width="240" height="400" allowtransparency="true" frameborder="0"
+                sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
             </div>
 
-            <!-- #Sidebar-->
-            <div class="col-12 col-lg-3 ">
-                <div class="col-12">
-                    <div class="row">
-                        <div class="col-12  mb-1">
-                            <div class="social bg-dark mx-auto">
-                                <a href="https://www.instagram.com/serayufansub/"><i class="bi bi-instagram"></i></a>
-                                <a href="https://discord.com/invite/ycTY2gk9k3"><i class="bi bi-discord"></i></a>
-                                <a href="https://www.facebook.com/serayufansub60fps/"><i class="bi bi-facebook"></i></a>
-                                <a href="https://www.youtube.com/channel/UCUJYB4Sr7A2R7RhjPeEiW_Q"><i
-                                        class="bi bi-youtube"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 sticky-top">
-                    <div class="row">
-
-                        <div class="col-12 col-sm-6 col-lg-12 mb-1 d-flex justify-content-center ">
-                            <iframe class="embed-responsive-item"
-                                src="https://discord.com/widget?id=788456247476617326&theme=dark" width="240"
-                                height="400" allowtransparency="true" frameborder="0"
-                                sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-                        </div>
-
-                        <div class="col-12 col-sm-6 col-lg-12 mb-1 d-flex justify-content-center ">
-                            <iframe class="embed-responsive-item"
-                                src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fserayufansub60fps%2F&tabs=timeline&width=240&height=400&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-                                width="240" height="300" style="border:none;overflow:hidden" scrolling="no"
-                                frameborder="0" allowfullscreen="true"
-                                allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-                        </div>
-
-                    </div>
-                </div>
-
+            <div class="col-12 col-sm-6 col-lg-12 mb-1 d-flex justify-content-center ">
+              <iframe class="embed-responsive-item"
+                src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fserayufansub60fps%2F&tabs=timeline&width=240&height=400&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+                width="240" height="300" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+                allowfullscreen="true"
+                allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
             </div>
-            <!-- #endSidebar -->
+
+          </div>
         </div>
 
+      </div>
+      <!-- #endSidebar -->
     </div>
-    <!-- #endContent -->
+
+  </div>
+  <!-- #endContent -->
 
   <!-- Footer -->
   <div class="footer-basic navbar-dark bg-dark mt-4 ">
