--- a/gallery.html
+++ b/gallery.html
@@ -168,14 +168,11 @@
 
                             <section class="gallery-block grid-gallery">
                                 <div class="container">
-                                    <div class="heading">
-                                        
-                                    </div>
                                     <div class="row">
                                         <div class="col-md-6 col-lg-4 item ">
-                                            <a class="lightbox" href="img/Screenshot/kimi_no_nawa_ss1.jpg" data-caption="Caption 1">
+                                            <a class="lightbox" href="img/gallery/Yuuki_cr.png" data-caption="Caption 1">
                                                 <img class="img-fluid image scale-on-hover"
-                                                    src="img/Screenshot/kimi_no_nawa_ss1.jpg">
+                                                    src="img/gallery/Yuuki_cr.png">
                                             </a>
                                         </div>
                                         <div class="col-md-6 col-lg-4 item ">
