commit ReWork Design - rework animepages

--- a/footFeedback.html
+++ b/footFeedback.html
@@ -216,24 +216,8 @@
 
                   <div class="collapse show " id="collapseMainDonate">
                     <h2>Donasi</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ut porta
-                      ante. Mauris in ante sit amet nisi imperdiet ultrices eget sit amet leo.
-                      Nullam ultricies vestibulum suscipit. Nunc blandit in enim sed luctus. Sed
-                      sodales augue elit, vitae finibus arcu gravida id. Maecenas id augue eget
-                      turpis hendrerit iaculis nec eu mi. Etiam sit amet ante dignissim, egestas
-                      eros suscipit, feugiat nibh. Quisque volutpat nec sem sed viverra.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ut porta
-                      ante. Mauris in ante sit amet nisi imperdiet ultrices eget sit amet leo.
-                      Nullam ultricies vestibulum suscipit. Nunc blandit in enim sed luctus. Sed
-                      sodales augue elit, vitae finibus arcu gravida id. Maecenas id augue eget
-                      turpis hendrerit iaculis nec eu mi. Etiam sit amet ante dignissim, egestas
-                      eros suscipit, feugiat nibh. Quisque volutpat nec sem sed viverra.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ut porta
-                      ante. Mauris in ante sit amet nisi imperdiet ultrices eget sit amet leo.
-                      Nullam ultricies vestibulum suscipit. Nunc blandit in enim sed luctus. Sed
-                      sodales augue elit, vitae finibus arcu gravida id. Maecenas id augue eget
-                      turpis hendrerit iaculis nec eu mi. Etiam sit amet ante dignissim, egestas
-                      eros suscipit, feugiat nibh. Quisque volutpat nec sem sed viverra.</p>
+                    <h4>Trakteer</h4>
+                    <p></p>
                   </div>
 
 
