--- a/gallery.html
+++ b/gallery.html
@@ -170,7 +170,7 @@
                                 <div class="container">
                                     <div class="row">
                                         <div class="col-md-6 col-lg-4 item ">
-                                            <a class="lightbox" href="img/gallery/Yuuki_cr.png" data-caption="Caption 1">
+                                            <a class="lightbox" href="img/gallery/Yuuki_cr.png" data-caption="Yuuki Character By yuuki">
                                                 <img class="img-fluid image scale-on-hover"
                                                     src="img/gallery/Yuuki_cr.png">
                                             </a>
@@ -206,7 +206,7 @@
                                             </a>
                                         </div>
                                         <div class="col-md-6 col-lg-4 item ">
-                                            <a class="lightbox" href="img/Screenshot/kimi_no_nawa_ss1.jpg" data-caption="Caption 1">
+                                            <a class="lightbox" href="img/Screenshot/kimi_no_nawa_ss1.jpg" data-caption="Caption 1"></a>
                                                 <img class="img-fluid image scale-on-hover"
                                                     src="img/Screenshot/kimi_no_nawa_ss1.jpg">
                                             </a>
