--- a/index.html
+++ b/index.html
@@ -220,14 +220,14 @@
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                 <div class="card">
                   <a class="btn btn-success" href="typeMovie.html"> Movie </a>
-                  <a href="animePages.html" class="myshow"><img class="card-img-top " src="img/Anime/Kimi_no_nawa.png">
+                  <a href="animePagesKimiNoNawa.html" class="myshow"><img class="card-img-top " src="img/Anime/Kimi_no_nawa.png">
                     <div class="card-img-overlay anchor-bg-color overlay">
                       <h6 class="card-title img-overlay-anchor"><strong>Kimi No nawa</strong></h6>
                       <small class="text-white">Post on 20-03-2020</small>
                     </div>
                 </div>
                 <div>
-                  <a class="btn btn-primary btn-block" href="animePages.html#download"> Download </a>
+                  <a class="btn btn-primary btn-block" href="animePagesKimiNoNawa.html#download"> Download </a>
                 </div>
               </div>
               <!-- #endCardMovie -->
@@ -236,14 +236,14 @@
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                 <div class="card">
                   <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
-                  <a href="animePages.html" class="myshow"><img class="card-img-top" src="img/Anime/fly_me_to_moon.jpg">
+                  <a href="animePagesTonikakuKawaii.html" class="myshow"><img class="card-img-top" src="img/Anime/fly_me_to_moon.jpg">
                     <div class="card-img-overlay anchor-bg-color overlay">
                       <h6 class="card-title img-overlay-anchor"><strong>Tonikaku Kawaii</strong></h6>
                       <small class="text-white">Post on 23-02-2020</small>
                     </div>
                 </div>
                 <div>
-                  <a class="btn btn-primary btn-block" href="animePages.html#download"> Download </a>
+                  <a class="btn btn-primary btn-block" href="animePagesTonikakuKawaii.html#download"> Download </a>
                 </div>
               </div>
               <!-- #endCardTv -->
