--- a/listLastestUpdate.html
+++ b/listLastestUpdate.html
@@ -164,7 +164,7 @@
                                     <a href="animePages.html" class="myshow"><img class="card-img-top "
                                             src="img/Anime/Kimi_no_nawa.png">
                                         <div class="card-img-overlay anchor-bg-color overlay">
-                                            <h6 class="card-title img-overlay-anchor"><strong>Kimi No nawa</strong></h6>
+                                            <h6 class="card-title img-overlay-anchor"><strong>Kimi No Na wa.</strong></h6>
                                             <small class="text-white">Post on 20-03-2020</small>
                                         </div>
                                 </div>
