commit ReWork Design - rework animepages 2 - add majotabi

--- a/animePages.html
+++ b/animePages.html
@@ -199,7 +199,7 @@
                                                         <td><a href="#romance">Romance</a>,
                                                             <a href="#Supernatural">Supernatural</a>,
                                                             <a href="#School">School</a>,
-                                                            <a href="#Drama">Drama</a>,
+                                                            <a href="#Drama">Drama</a>
                                                         </td>
                                                     </tr>
                                                     <tr>
