--- a/animePagesKimiNoNawa.html
+++ b/animePagesKimiNoNawa.html
@@ -196,10 +196,10 @@
                                                     </tr>
                                                     <tr>
                                                         <th class="table-active px-1" scope="row">Genres</th>
-                                                        <td><a href="#romance">Romance</a>,
+                                                        <td><a href="#Romance">Romance</a>,
                                                             <a href="#Supernatural">Supernatural</a>,
                                                             <a href="#School">School</a>,
-                                                            <a href="#Drama">Drama</a>,
+                                                            <a href="#Drama">Drama</a>
                                                         </td>
                                                     </tr>
                                                     <tr>
