--- a/animePagesTonikakuKawaii.html
+++ b/animePagesTonikakuKawaii.html
@@ -196,9 +196,9 @@
                                                     </tr>
                                                     <tr>
                                                         <th class="table-active px-1" scope="row">Genres</th>
-                                                        <td><a href="#romance">Romance</a>,
+                                                        <td><a href="#Romance">Romance</a>,
                                                             <a href="#Comedy">Comedy</a>,
-                                                            <a href="#Shounen">Shounen</a>,
+                                                            <a href="#Shounen">Shounen</a>
                                                         </td>
                                                     </tr>
                                                     <tr>
