--- a/gallery.html
+++ b/gallery.html
@@ -176,15 +176,15 @@
                                             </a>
                                         </div>
                                         <div class="col-md-6 col-lg-4 item ">
-                                            <a class="lightbox" href="img/Screenshot/kimi_no_nawa_ss1.jpg" data-caption="Caption 1">
+                                            <a class="lightbox" href="img/Screenshot/KimiNoNawa/Screenshot (316).png" data-caption="Kimi No Nawa">
                                                 <img class="img-fluid image scale-on-hover"
-                                                    src="img/Screenshot/kimi_no_nawa_ss1.jpg">
+                                                    src="img/Screenshot/KimiNoNawa/Screenshot (316).png">
                                             </a>
                                         </div>
                                         <div class="col-md-6 col-lg-4 item ">
-                                            <a class="lightbox" href="img/Screenshot/kimi_no_nawa_ss1.jpg" data-caption="Caption 1">
+                                            <a class="lightbox" href="img/Screenshot/MajoNoTabi/Screenshot (113).png" data-caption="Majo no Tabitabi">
                                                 <img class="img-fluid image scale-on-hover"
-                                                    src="img/Screenshot/kimi_no_nawa_ss1.jpg">
+                                                    src="img/Screenshot/MajoNoTabi/Screenshot (113).png">
                                             </a>
                                         </div>
                                         <div class="col-md-6 col-lg-4 item ">
