--- a/index.html
+++ b/index.html
@@ -252,14 +252,14 @@
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                 <div class="card">
                   <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
-                  <a href="animePages.html" class="myshow"><img class="card-img-top" src="img/Anime/majo_no_tabi.jpg">
+                  <a href="animePagesMajoNoTabi.html" class="myshow"><img class="card-img-top" src="img/Anime/majo_no_tabi.jpg">
                     <div class="card-img-overlay anchor-bg-color overlay">
                       <h6 class="card-title img-overlay-anchor"><strong>Majo no Tabitabi</strong></h6>
                       <small class="text-white">Post on 20-02-2020</small>
                     </div>
                 </div>
                 <div>
-                  <a class="btn btn-primary btn-block" href="animePages.html#download"> Download </a>
+                  <a class="btn btn-primary btn-block" href="animePagesMajoNoTabi.html#download"> Download </a>
                 </div>
               </div>
               <!-- #endCardTv -->
