--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                 <div class="card">
                   <a class="btn btn-danger" href="typeSpecial.html"> Special </a>
-                  <a href="animePages.html" class="myshow"><img class="card-img-top " src="img/Anime/violet_ova.png">
+                  <a href="animePagesVioletOva.html" class="myshow"><img class="card-img-top " src="img/Anime/violet_ova.png">
                     <div class="card-img-overlay anchor-bg-color overlay">
                       <h6 class="card-title img-overlay-anchor"><strong>Violet Evergarden: Kitto "Ai" wo Shiru Hi ga
                           Kuru no Darou</strong></h6>
@@ -276,7 +276,7 @@
                     </div>
                 </div>
                 <div>
-                  <a class="btn btn-primary btn-block" href="animePages.html#download"> Download </a>
+                  <a class="btn btn-primary btn-block" href="animePagesVioletOva.html#download"> Download </a>
                 </div>
               </div>
               <!-- #endCardSpecial -->
